--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
   "author": "Juan Pablo Avilan y Juan Mateo de la Hoz",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-jwt": "^7.7.7",
+    "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.11.0",
-    "mongoose": "^6.7.0"
+    "mongoose": "^6.7.0",
+    "npm": "^8.19.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
