--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.11.0",
-    "mongoose": "^6.7.0",
+    "mongoose": "^6.7.2",
+    "moongose": "^1.0.0",
     "npm": "^8.19.3",
     "uuid": "^9.0.0"
   },
